# grant-and-claim-netns-interfaces

./: .gitignore  Makefile.am  README.md  configure.ac  grant-and-claim-netns-interfaces-targetpid-discovery-podman  grant-and-claim-netns-interfaces.conf
src/: main.c
